Improve source code for clarity and readability, fix spelling errors